cloudid/k8s/default/service-ingress-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-proxy-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8443
      protocol: TCP
  selector:
    app: ingress-proxy
